--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,11 @@ playground.xcworkspace
 # Packages/
 # Package.pins
 # Package.resolved
-# *.xcodeproj
+
+# xcodegen
+*.xcodeproj
+*.xcworkspace
+
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
