--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,6 @@ playground.xcworkspace
 # Package.pins
 # Package.resolved
 
-# xcodegen
-*.xcodeproj
-*.xcworkspace
-
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
@@ -58,10 +54,12 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+# xcodegen
+*.xcodeproj
+*.xcworkspace
 
 # Carthage
 #
@@ -92,3 +90,7 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+/.bundle/
+/vendor/bundle/
+/lib/bundler/man/
