--- a/RoyaleApp/Info.plist
+++ b/RoyaleApp/Info.plist
@@ -64,5 +64,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-3870375746282451~2546825069
+</string>
 </dict>
 </plist>
