--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     
     # チェックアウト
-    -uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     # Xcode 出力一覧
     - name: Show Xcode list
@@ -59,13 +59,13 @@ jobs:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # ビルド
-     - name: Xcode build
-       run: make build-debug
+    - name: Xcode build
+      run: make build-debug
 
-     # 端末の一覧出力
-     - name: Show devices
-       run: make show-devices
+    # 端末の一覧出力
+    - name: Show devices
+      run: make show-devices
 
-     # 単体テストの実行
-     - name: Xcode test
-       run: make test
+    # 単体テストの実行(今の所単体テストは無いのでコメントアウト)
+    #- name: Xcode test
+    #  run: make test
