--- a/project.yml
+++ b/project.yml
@@ -269,6 +269,20 @@ targets:
         --format\n  mint run swiftlint swiftlint\nelse\n  echo \"warning: Mint not
         installed, download from https://github.com/yonaskolb/Mint\"\nfi\n"
       shell: /bin/sh
+
+    preBuildScripts:
+    - name: Copy GoogleService-Info.plist
+      script: |
+       # Type a script or drag a script file from your workspace to insert its path.
+       PATH_TO_GOOGLE_PLISTS="${PROJECT_DIR}/RoyaleApp/"
+       case "${CONFIGURATION}" in
+          "Debug" )
+              cp -r "$PATH_TO_GOOGLE_PLISTS/GoogleService-Info-dev.plist" "${BUILT_PRODUCTS_DIR}/${PRODUCT_NAME}.app/GoogleService-Info.plist" ;;
+          "Release" )
+              cp -r "$PATH_TO_GOOGLE_PLISTS/GoogleService-Info.plist" "${BUILT_PRODUCTS_DIR}/${PRODUCT_NAME}.app/GoogleService-Info.plist" ;;
+             *)
+               ;;
+       esac
     - inputFiles:
       - $(SRCROOT)/Carthage/Build/iOS/Alamofire.framework
       - $(SRCROOT)/Carthage/Build/iOS/SwipeableTabBarController.framework
@@ -278,36 +292,38 @@ targets:
       - $(SRCROOT)/Carthage/Build/iOS/Kingfisher.framework
       name: Carthage
       outputFiles:
-      - '$(BUILT_PRODUCTS_DIR)/$(FRAMEWORKS_FOLDER_PATH)/Alamofire.framework
-
-        '
+      - '$(BUILT_PRODUCTS_DIR)/$(FRAMEWORKS_FOLDER_PATH)/Alamofire.framework'
       - $(BUILT_PRODUCTS_DIR)/$(FRAMEWORKS_FOLDER_PATH)/SwipableTabBarController.framework
       - $(BUILT_PRODUCTS_DIR)/$(FRAMEWORKS_FOLDER_PATH)/Realm.framework
       - $(BUILT_PRODUCTS_DIR)/$(FRAMEWORKS_FOLDER_PATH)/RealmSwift.framework
       - $(BUILT_PRODUCTS_DIR)/$(FRAMEWORKS_FOLDER_PATH)/Charts.framework
       runOnlyWhenInstalling: false
-      script: 'mint run Carthage/Carthage carthage copy-frameworks
-
-        '
+      script: 'mint run Carthage/Carthage carthage copy-frameworks'
       shell: /bin/sh
     settings:
       configs:
         Debug:
           ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: YES
-          CODE_SIGN_STYLE: Automatic
+          CODE_SIGN_IDENTITY: Apple Development
+          CODE_SIGN_STYLE: Manual
           DEVELOPMENT_TEAM: 8CBGKNYH9U
+          PROVISIONING_PROFILE_SPECIFIER: RoyaleApp_Development
           INFOPLIST_FILE: RoyaleApp/Info.plist
           IPHONEOS_DEPLOYMENT_TARGET: 13.0
-          PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.RoyaleApp
+          PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.RoyaleApp.dev
           SWIFT_VERSION: 5.0
+          ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon-Dev
         Release:
           ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: YES
-          CODE_SIGN_STYLE: Automatic
+          CODE_SIGN_IDENTITY: Apple Distribution
+          CODE_SIGN_STYLE: Manual
           DEVELOPMENT_TEAM: 8CBGKNYH9U
+          PROVISIONING_PROFILE_SPECIFIER: RoyaleApp_Production
           INFOPLIST_FILE: RoyaleApp/Info.plist
           IPHONEOS_DEPLOYMENT_TARGET: 13.0
           PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.RoyaleApp
           SWIFT_VERSION: 5.0
+          ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
     sources: [RoyaleApp]
     type: application
   RoyaleAppTests:
