--- a/project.yml
+++ b/project.yml
@@ -89,18 +89,18 @@ targets:
       - sdk: libc++.tbd
       - target: DataStore
       - target: Domain
-      - framework: Carthage/Build/iOS/FIRAnalyticsConnector.framework
-      - framework: Carthage/Build/iOS/FirebaseAnalytics.framework
-      - framework: Carthage/Build/iOS/FirebaseCore.framework
-      - framework: Carthage/Build/iOS/FirebaseCoreDiagnostics.framework
-      - framework: Carthage/Build/iOS/FirebaseCrashlytics.framework
-      - framework: Carthage/Build/iOS/FirebaseInstallations.framework
-      - framework: Carthage/Build/iOS/FirebaseRemoteConfig.framework
-      - framework: Carthage/Build/iOS/GoogleAppMeasurement.framework
-      - framework: Carthage/Build/iOS/GoogleDataTransport.framework
-      - framework: Carthage/Build/iOS/GoogleUtilities.framework
-      - framework: Carthage/Build/iOS/nanopb.framework
-      - framework: Carthage/Build/iOS/PromisesObjC.framework
+      - carthage: FIRAnalyticsConnector
+      - carthage: FirebaseAnalytics
+      - carthage: FirebaseCore
+      - carthage: FirebaseCoreDiagnostics
+      - carthage: FirebaseCrashlytics
+      - carthage: FirebaseInstallations
+      - carthage: FirebaseRemoteConfig
+      - carthage: GoogleAppMeasurement
+      - carthage: GoogleDataTransport
+      - carthage: GoogleUtilities
+      - carthage: nanopb
+      - carthage: PromisesObjC
 
   DataStore:
     type: framework
@@ -112,14 +112,11 @@ targets:
       PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.DataStore
       SWIFT_VERSION: 5.0
       OTHER_LDFLAGS: -ObjC      
-      FRAMEWORK_SEARCH_PATHS:
-        - $(inherited)
-        - $(PROJECT_DIR)/Carthage/Build/iOS
-        - $(PROJECT_DIR)
+      LD_RUNPATH_SEARCH_PATHS: ${inherited} @executable_path/Frameworks @loader_path/Frameworks
     dependencies:
-      - framework: Carthage/Build/iOS/Alamofire.framework
-      - framework: Realm.framework
-      - framework: RealmSwift.framework
+      - carthage: Alamofire
+      - carthage: Realm
+      - carthage: RealmSwift
 
   Domain:
     type: framework
@@ -130,9 +127,6 @@ targets:
       INFOPLIST_FILE: Domain/Info.plist      
       PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.Domain
       SWIFT_VERSION: 5.0      
-      FRAMEWORK_SEARCH_PATHS:
-        - $(inherited)
-        - $(PROJECT_DIR)/Carthage/Build/iOS
     dependencies:
       - target: DataStore
 
@@ -143,19 +137,17 @@ targets:
     dependencies:
       - target: Analytics
       - target: Domain
-      - framework: Carthage/Build/iOS/Charts.framework
-      - framework: Carthage/Build/iOS/Kingfisher.framework
-      - framework: Carthage/Build/iOS/SwipeableTabBarController.framework
-      - framework: Carthage/Build/iOS/GoogleMobileAds.framework
+      - carthage: Charts
+      - carthage: Kingfisher
+      - carthage: SwipeableTabBarController
+      - carthage: GoogleMobileAds
     settings:
       CODE_SIGN_STYLE: Automatic
       INFOPLIST_FILE: Presentation/Info.plist
       PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.Presentation
       SWIFT_VERSION: 5.0
       OTHER_LDFLAGS: -ObjC
-      FRAMEWORK_SEARCH_PATHS:
-        - $(inherited)
-        - $(PROJECT_DIR)/Carthage/Build/iOS
+      LD_RUNPATH_SEARCH_PATHS: ${inherited} @executable_path/Frameworks @loader_path/Frameworks
 
 schemes:
   RoyaleApp:
