--- a/project.yml
+++ b/project.yml
@@ -40,9 +40,11 @@ targets:
         Debug:
           PROVISIONING_PROFILE_SPECIFIER: RoyaleApp_Development
           ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon-Dev
+          CODE_SIGN_ENTITLEMENTS: RoyaleApp/RoyaleApp_Debug.entitlements
         Release:
           PROVISIONING_PROFILE_SPECIFIER: RoyaleApp_Production
           ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
+          CODE_SIGN_ENTITLEMENTS: RoyaleApp/RoyaleApp_Release.entitlements
 
     dependencies:
       - target: Analytics    
@@ -152,13 +154,21 @@ targets:
     settings:
       base:
         INFOPLIST_FILE: RoyaleAppWidget/Info.plist
-        PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.RoyaleApp.dev.Widget
         PRODUCT_NAME: "RoyaleAppWidgets"
         OTHER_LDFLAGS: $(inherited) $(OTHER_LDFLAGS) -ObjC
         LD_RUNPATH_SEARCH_PATHS: 
           - "$(inherited)"
           - "@executable_path/Frameworks"
           - "@executable_path/../../Frameworks"
+      configs:
+        Debug:
+          PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.RoyaleApp.dev.Widget
+          PROVISIONING_PROFILE_SPECIFIER: RoyaleApp_Widget_Development
+          CODE_SIGN_ENTITLEMENTS: RoyaleAppWidget/RoyaleAppWidgets_Debug.entitlements
+        Release:
+          PRODUCT_BUNDLE_IDENTIFIER: nakandakari.toru.RoyaleApp.Widget
+          PROVISIONING_PROFILE_SPECIFIER: RoyaleApp_Widget_Production
+          CODE_SIGN_ENTITLEMENTS: RoyaleAppWidget/RoyaleAppWidgets_Release.entitlements
 
 schemes:
   RoyaleApp:
