--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -30,3 +30,7 @@ excluded:
 # 1行あたりの文字数制限を300に変更
 # プロジェクト作成時にデフォルトで追加されるコメントをひっかけないため
 line_length: 300
+# 変数名の長さの上限を少し上げる(デフォルトは40文字まで)
+type_name:
+  min_length: 3
+  max_length: 50
