--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,12 @@ on:
       - Rambafile
 
 env: 
-  DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer # TODO: Xcode_12.5
+  DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
   cache-version: v2
 
 jobs:
   test:
-    runs-on: macos-latest # TODO: macos-11.0
+    runs-on: macos-latest
     env:
       MINT_PATH: mint/lib
       MINT_LINK_PATH: mint/bin
