--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,11 @@ on:
       - Rambafile
 
 env: 
-  DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
-  cache-version: v2
+  DEVELOPER_DIR: /Applications/Xcode_12.5.1.app/Contents/Developer
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: macos-11
     env:
       MINT_PATH: mint/lib
       MINT_LINK_PATH: mint/bin
