--- a/project.yml
+++ b/project.yml
@@ -5,7 +5,7 @@ options:
   deploymentTarget:
     iOS: 13.0
   developmentLanguage: en
-  xcodeVersion: "13.0"
+  xcodeVersion: "13.1"
 
 settings:
   base:
@@ -25,15 +25,13 @@ configFiles:
   Release: Configs/release_config.xcconfig
 
 packages: # SPM で扱うパッケージ
+  # Charts SDK のために必要
   Algorithms:
     url: https://github.com/apple/swift-algorithms
-    from: 1.0.0
+    version: 0.0.1
   Firebase:
     url: https://github.com/firebase/firebase-ios-sdk.git
-    from: 8.0.0
-  GoogleMobileAds:
-    url: https://github.com/quanghits/GoogleMobileAds
-    from: 8.0.0
+    version: 8.9.1
 
 targets:
   RoyaleApp:
@@ -64,6 +62,16 @@ targets:
       - target: Domain
       - target: Presentation
       - target: RoyaleAppWidget
+        codeSign: false
+        embed: true
+      # Carthage + xcframework ではアプリ本体側にも追加しないと実機ビルドでリンクエラーになる
+      - framework: Carthage/Build/Alamofire.xcframework
+      - framework: Carthage/Build/Realm.xcframework
+      - framework: Carthage/Build/RealmSwift.xcframework
+      - framework: Carthage/Build/Kingfisher.xcframework
+      - framework: Carthage/Build/SwipeableTabBarController.xcframework
+      - framework: Carthage/Build/Charts.xcframework
+
     preBuildScripts:
       - path: ./Scripts/Google/copy_google_service_info_plist.sh
         name: Copy GoogleService-Info.plist  
@@ -93,7 +101,6 @@ targets:
         OTHER_SWIFT_FLAGS: -Xfrontend -warn-long-function-bodies=300 -Xfrontend -debug-time-function-bodies -Xfrontend -warn-long-expression-type-checking=200"
         FRAMEWORK_SEARCH_PATHS:
           - $(inherited)
-          - $(PROJECT_DIR)/Carthage/Build/iOS
     dependencies:
       - sdk: libc++.tbd
       - target: DataStore
@@ -145,7 +152,7 @@ targets:
       - framework: Carthage/Build/Charts.xcframework
       - framework: Carthage/Build/Kingfisher.xcframework
       - framework: Carthage/Build/SwipeableTabBarController.xcframework
-      - package: GoogleMobileAds
+      - framework: Frameworks/GoogleMobileAds/GoogleMobileAds.xcframework
       - package: Algorithms
     settings:
       base:
