--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - develop
+      - feature/updateXcode13
     paths-ignore:
       - Templates/**
       - README.md
