Package.resolvedをgit管理対象化にした

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ Pods/
 # xcodegen
 *.xcodeproj
 *.xcworkspace
+!RoyaleApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
+
 
 # Carthage
 #
